Changed big temperature styling

--- a/index.html
+++ b/index.html
@@ -23,24 +23,32 @@
   <body>
     <div class="container">
       <div class="weather-app">
-        <form class="search" id="search-form">
-          <input type="text" placeholder="Search locations" id="search-input" />
-          <input type="submit" value="Search" class="btn btn-primary" />
-          <button type="button" class="btn btn-success" id="current-button">
-            Current
-          </button>
+
+
+        <form class="search">
+          <div class="row">
+            <div class="col-9">
+              <input type="search" placeholder="Search Locations" class="form-control search-input">
+            </div>
+            <div class="col-3 p-0">
+              <input type="submit" class="btn btn-primary w-100" value="Search">
+            </div>
+          </div>
         </form>
 
         <h1 class="weather-heading">Current Weather Conditions</h1>
         <p class="date-time"></p>
 
         <div class="current-temp">
-          <div class="big-temp" id="big-temp">--°F</p>
+          <span class="big-temp">60</span>
+          <span class="unit">°F | <a href="#">°C</a></span>
         </div>
 
-        <div class="description"></div>
-        <div class="humidity">Humidity: %</div>
-        <div class="wind">Wind: km/h</div>
+        <div class="weather-info">
+          <div class="description"></div>
+          <div class="humidity">Humidity: %</div>
+         <div class="wind">Wind: km/h</div>
+        </div>
 
       </br>
         <h2 class="future-conditions">5 Day Forecast</h2>
