Added icon img to HTML and made icon relevant from API

--- a/index.html
+++ b/index.html
@@ -41,10 +41,13 @@
         <h1 class="weather-heading">Current Weather Conditions</h1>
         <p class="date-time"></p>
 
-        <div class="current-temp">
-          <span class="big-temp" id="big-temp">--</span>
-          <span class="unit">°F | <a href="#">°C</a></span>
-        </div>
+            
+            <div class="current-temp">
+             <span><img src="https://www.wunderground.com/static/i/c/v4/30.svg" alt="Clear" id="icon" class="float-left" width="100"/></span> 
+             <span class="big-temp" id="big-temp">--</span>
+             <span class="unit">°F | <a href="#">°C</a></span>
+            </div>
+    
 
         <div class="weather-info">
           <div class="description" id="description"></div>
