Changed img position

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <p class="date-time"></p>
 
             
-            <div class="current-temp">
-             <span><img src="https://www.wunderground.com/static/i/c/v4/30.svg" alt="Clear" id="icon" class="float-left" width="100"/></span> 
+            <div class="clearfix current-temp">
+             <span><img src="" alt="Clear" id="icon" class="float-left"/></span> 
              <span class="big-temp" id="big-temp">--</span>
              <span class="unit">°F | <a href="#">°C</a></span>
             </div>
