--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <form class="search">
           <div class="row">
             <div class="col-9">
-              <input type="search" placeholder="Search Locations" class="form-control search-input">
+              <input type="search" placeholder="Search Locations" class="form-control search-input" id="search-input" autocomplete="off">
             </div>
             <div class="col-3 p-0">
               <input type="submit" class="btn btn-primary w-100" value="Search" id="search-btn">
