Made background color transparent

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
-  <body style="background-color: #eededd;">
+  <body style="background-color: rgba(238, 222, 221, 0.5);">
     <div class="container">
       <div class="weather-app">
 
