--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
             <div class="clearfix current-temp">
              <span><img src="https://openweathermap.org/img/wn/02d@2x.png" alt="Clear" id="icon" class="float-left"/></span> 
              <span class="big-temp" id="big-temp"></span>
-             <span class="unit">°F | <a href="#">°C</a></span>
+             <span class="unit">
+               <a href="#" id="fahrenheit-link" class="active">°F</a> |
+               <a href="#" id="celsius-link">°C</a>
+              </span>
             </div>
     
 
