--- a/index.html
+++ b/index.html
@@ -61,16 +61,8 @@
       </br>
       
         <h2 class="future-conditions">5 Day Forecast:</h2>
-        <div class="weather-forecast">
-          <div class="row">
-            <div class="col-2">
-              <div class="weather-forecast-day">Thursday</div>
-              <img src="https://openweathermap.org/img/wn/02d@2x.png" alt="Clear" width="55"/>
-              <div class="weather-forecast-temp">
-                <span class="weather-forecast-max">50°</span>
-                <span class="weather-forecast-min">40°</span>
-            </div>
-          </div>
+        <div class="weather-forecast" id="forecast">
+          
         </div>
       </div>
     </div>
