--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       </br>
       
-        <h2 class="future-conditions">5 Day Forecast:</h2>
+        <h2 class="future-conditions">Weather Forecast:</h2>
         <div class="weather-forecast" id="forecast">
           
         </div>
